--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>22.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
